# romspy

c++/: CMakeLists.txt
c++/src/: nanobind.cpp  river_forcing.cpp  roms_forcing_utils.cpp  roms_forcing_utils.h  seaice.cpp
romspy/: UP_data_paths.py  __init__.py  create_DIC_means.sh  format_DIC_means.py  preprocessing_bry.py  preprocessing_clm.py  preprocessing_frc.py  preprocessing_ini.py
romspy/adjustments/: DFS_correction_ERA5.py  biology_params.py  bry.py  chl_to_depth.py  clim.py  forcing.py
romspy/grid_routines/: grd_to_scrip.py
romspy/interpolation/: interpolator.py  shift_grid.py
romspy/interpolation/horizontal/: interpolate.py
romspy/interpolation/vertical/: interpolate.py
tests/: Create_clm_pactcs30.py  Create_frc_cycl_pactcs30.py  Create_frc_trans_pactcs30.py  ERA5_hourly.py  ERA5_hourly_daily.py  Test_bio_1.py  Windstress_daily.py  Windstress_hourly.py  n2o_ini.py  n2o_ini_Jana.py  test_seaicecorr.py
